<resources>
    <string name="app_name">FFmpegVideoRecorder Demo</string>
    <string name="audio_bitrate">Audio Bitrate (bytes)</string>
    <string name="audio_channel_count">Audio Channel Count</string>
    <string name="audio_codec">Audio Codec</string>
    <string name="audio_options">Audio Options</string>
    <string name="audio_sample_rate">Audio Sample Rate</string>
    <string name="audio_sample_rate_hz">Audio Sample Rate (Hz)</string>
    <string name="can_crop_video">Can crop video</string>
    <string name="can_pad_video">Can pad video</string>
    <string name="can_upscale_video">Can upscale video</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_video_files">Are you sure you want to delete all video files?</string>
    <string name="delete_video_file">Are you sure you want to delete the video file?</string>
    <string name="error">Error</string>
    <string name="error_value_is_empty">Value is empty</string>
    <string name="error_value_is_negative">Value is negative</string>
    <string name="error_value_is_not_a_number">Value is not a number</string>
    <string name="error_value_is_zero">Value is zero</string>
    <string name="launch_video_recorder">Launch Video Recorder</string>
    <string name="max_file_size">Max file size (MB)</string>
    <string name="max_recording_time">Max recording (seconds)</string>
    <string name="min_recording_time">Min recording (seconds)</string>
    <string name="ok">OK</string>
    <string name="output_format">Output Format</string>
    <string name="recording">Recording</string>
    <string name="recording_options">Recording Options</string>
    <string name="results">Results</string>
    <string name="success">Success</string>
    <string name="thumbnail_preview">Thumbnail Preview</string>
    <string name="video_bitrate">Video Bitrate</string>
    <string name="video_bitrate_bytes">Video Bitrate (bytes)</string>
    <string name="video_camera_facing">Video Camera Facing</string>
    <string name="video_codec">Video Codec</string>
    <string name="video_date">Video Date</string>
    <string name="video_file_format">Video File Format</string>
    <string name="video_file_size">Video File Size</string>
    <string name="video_frames_per_second">Video Frames Per Second</string>
    <string name="video_frame_rate">Video Frame Rate</string>
    <string name="video_height">Video Height</string>
    <string name="video_height_px">Video Height (px)</string>
    <string name="video_length">Video Length</string>
    <string name="video_options">Video Options</string>
    <string name="video_scale_direction">Video Scale Direction</string>
    <string name="video_scale_fit">Video Scale Fit</string>
    <string name="video_width">Video Width</string>
    <string name="video_width_px">Video Width (px)</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="thumbnail_file_size">Thumbnail File Size</string>
    <string name="unknown">Unknown</string>
</resources>
