<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/thumbnail"/>

        <View
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="0dp"/>

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/thumbnail_file_size"/>

        <TextView
            android:id="@+id/thumbnail_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/video_date"/>

        <TextView
            android:id="@+id/video_file_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/video_file_size"/>

        <TextView
            android:id="@+id/video_file_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/video_file_format"/>

        <TextView
            android:id="@+id/video_file_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/video_length"/>

        <TextView
            android:id="@+id/video_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/video_codec"/>

        <TextView
            android:id="@+id/video_codec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/video_width"/>

        <TextView
            android:id="@+id/video_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/video_height"/>

        <TextView
            android:id="@+id/video_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="0"
            android:text="@string/video_frame_rate"/>

        <TextView
            android:id="@+id/video_frame_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="10"
            android:layout_column="0"
            android:text="@string/video_bitrate"/>

        <TextView
            android:id="@+id/video_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="10"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="11"
            android:layout_column="0"
            android:text="@string/audio_codec"/>

        <TextView
            android:id="@+id/audio_codec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="11"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="12"
            android:layout_column="0"
            android:text="@string/audio_sample_rate"/>

        <TextView
            android:id="@+id/audio_sample_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="12"
            android:layout_column="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="13"
            android:layout_column="0"
            android:text="@string/audio_channel_count"/>

        <TextView
            android:id="@+id/audio_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="13"
            android:layout_column="2"/>

    </GridLayout>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_close_white_24dp"
        android:tint="@android:color/black"/>

</RelativeLayout>
